backend/api/tests/integration/course/snapshots/integration__course__unit__get_draft.snap
---
source: tests/integration/course/unit.rs
expression: body
---
{
  "id": "e0984370-906c-11ed-b4f6-3f864931e86f",
  "displayName": "course1 unit 1",
  "description": "Image",
  "imageId": "3095d05e-f2c7-11ea-89c3-3b621dd74a1f"
}
