backend/api/tests/integration/course/snapshots/integration__course__unit__get_live.snap
---
source: tests/integration/course/unit.rs
expression: body
---
{
  "id": "09225312-906d-11ed-b4f6-afb0e90115b3",
  "displayName": "course2 unit 1",
  "description": "PDF",
  "pdfId": "128e0870-6813-11ec-a1fd-73f800abf897"
}
